Background and alignment
Background and alignment change

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Portals Point</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-
+<!--
 	<link href="templatemo_style.css" type="text/css" rel="stylesheet" /> 
 	<script type="text/javascript" src="js/jquery.min.js"></script> 
 	<script type="text/javascript" src="js/jquery.scrollTo-min.js"></script> 
@@ -14,11 +14,11 @@
     
     <link rel="stylesheet" href="css/slimbox2.css" type="text/css" media="screen" /> 
     <script type="text/JavaScript" src="js/slimbox2.js"></script> 
-
+-->
 </head> 
 <body>
 	
-<p> please visit the <a href="https://awsafabrar.github.io/UBL-CD-Portals-Point-v2/"> updated link </a> </p>
+<p> <h3 style="text-align:center;"> please visit the <a href="https://awsafabrar.github.io/UBL-CD-Portals-Point-v2/"> updated link </a> </h> </p>
 	
 <!--
 <div id="templatemo_header">
